# flask_tutorial_with_fastapi

./: .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  app.yaml  app.yaml.template  cloudbuild.yaml  pyproject.toml
.github/workflows/: test_and_lint.yaml
fastapir/: __init__.py  auth.py  blog.py  config.py  db.py  main.py
fastapir/db/: __init__.py  crud.py  database.py  models.py
fastapir/templates/: base.html  index.html  login.html  update.html
fastapir/templates/auth/: login.html  register.html
fastapir/templates/blog/: create.html  update.html
tests/: conftest.py  test_auth.py  test_blog.py  test_main.py
