[tool.poetry]
name = "flask_tutorial_with_fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
coverage = "^5.5"
Jinja2 = "^2.11.3"
aiofiles = "^0.6.0"
python-multipart = "^0.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
SQLAlchemy = "^1.4.5"
itsdangerous = "^1.1.0"
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.2.2"
requests = "^2.25.1"
mypy = "^0.812"
rope = "^0.18.0"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
